--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "vue": "^3.5.13",
     "vuepress": "2.0.0-rc.19",
     "vuepress-theme-reco": "2.0.0-rc.26",
-    "@vuepress/bundler-vite": "2.0.0-rc.19",
-    "@vuepress/bundler-webpack": "2.0.0-rc.19"
+    "@vuepress/bundler-vite": "2.0.0-rc.19"
   }
 }
